Replace deprecated usage of newInstance()